# AutoScout-Lab

./: README.md
ai_scout_batch_2026_03_28/advanced-retrieval-rag-prototype/: README.md  config.py  main.py  requirements.txt
ai_scout_batch_2026_03_30/llm-tool-orchestration-prototype/: README.md  main.py  requirements.txt
ai_scout_batch_2026_03_30/llm-tool-orchestration-prototype/agents/: __init__.py  base_agent.py  primary_orchestrator.py  tool_executor_agent.py  verifier_agent.py
ai_scout_batch_2026_03_30/llm-tool-orchestration-prototype/config/: llm_config.py  settings.py
ai_scout_batch_2026_03_30/llm-tool-orchestration-prototype/llm_integrations/: __init__.py  llm_client.py
ai_scout_batch_2026_03_30/llm-tool-orchestration-prototype/tools/: __init__.py  dummy_tools.py  sandbox_executor.py  tool_definitions.py  tool_registry.py
ai_scout_batch_2026_03_31/quantizeflow/: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
ai_scout_batch_2026_03_31/quantizeflow/quantizeflow/: __init__.py  autograd.py  ops.py  tensor.py  utils.py
ai_scout_batch_2026_03_31/quantizeflow/quantizeflow/_C/: __init__.py  quantizeflow_ext.cpp
ai_scout_batch_2026_04_01/hybrid-rag-prototype/: .env  README.md  main.py  pyproject.toml  requirements.txt
ai_scout_batch_2026_04_01/hybrid-rag-prototype/src/: __init__.py  config.py  utils.py
ai_scout_batch_2026_04_01/hybrid-rag-prototype/src/ingestion/: __init__.py  document_loader.py
ai_scout_batch_2026_04_01/hybrid-rag-prototype/src/ingestion/parsers/: __init__.py  code_ast_parser.py  text_parser.py
ai_scout_batch_2026_04_02/personalized-multimodal-evidence-grounding-framework/: .env  README.md  config.py  main.py  requirements.txt  tests.py
ai_scout_batch_2026_04_03/intelligent-rag-kg-fusion-prototype/: README.md  main.py  requirements.txt
ai_scout_batch_2026_04_03/intelligent-rag-kg-fusion-prototype/config/: __init__.py  kg_db_config.py  llm_config.py  settings.py  vector_db_config.py
ai_scout_batch_2026_04_03/intelligent-rag-kg-fusion-prototype/src/: __init__.py
ai_scout_batch_2026_04_04/grounded-token-data-generator/: .env  README.md  config.py  main.py  requirements.txt
ai_scout_batch_2026_04_04/grounded-token-data-generator/scripts/: setup_kb_connectors.py
ai_scout_batch_2026_04_05/diffusion-subject-manager-prototype/: README.md  requirements.txt
ai_scout_batch_2026_04_05/diffusion-subject-manager-prototype/examples/: demo_integration.py
ai_scout_batch_2026_04_05/diffusion-subject-manager-prototype/mock_diffusion/: __init__.py  mock_diffusion_pipeline.py  mock_unet.py
ai_scout_batch_2026_04_05/diffusion-subject-manager-prototype/src/: __init__.py  config.py  latent_pool.py  subject_manager.py  subject_registry.py  utils.py
ai_scout_batch_2026_04_05/diffusion-subject-manager-prototype/tests/: test_latent_pool.py  test_subject_registry.py
ai_scout_batch_2026_04_06/advanced-rag-orchestration-framework/: README.md  main.py  requirements.txt
ai_scout_batch_2026_04_06/advanced-rag-orchestration-framework/src/: __init__.py
ai_scout_batch_2026_04_07/ai-agent-persistent-context-memory/: README.md  config.py  main.py  requirements.txt
ai_scout_batch_2026_04_07/ai-agent-persistent-context-memory/agent/: __init__.py  checkpoint_manager.py  context_optimizer.py  core_agent.py  knowledge_crystallizer.py  memory_subsystem.py  state_manager.py
ai_scout_batch_2026_04_07/ai-agent-persistent-context-memory/context/: __init__.py  changelog_processor.py  context_aggregator.py  semantic_context_retriever.py  tree_context_model.py
ai_scout_batch_2026_04_12/ai-agent-meta-monitor/: README.md  config.py  main.py  requirements.txt
ai_scout_batch_2026_04_12/ai-agent-meta-monitor/agents/: __init__.py  base_agent.py  demo_agent.py  tools.py
ai_scout_batch_2026_04_12/ai-agent-meta-monitor/examples/: run_stuck_scenario.py
ai_scout_batch_2026_04_12/ai-agent-meta-monitor/monitor/: __init__.py  core.py  instrumentation.py  state_manager.py
ai_scout_batch_2026_04_16/geometric-reasoning-dsl-prototype/: README.md  main.py  setup.py
ai_scout_batch_2026_04_16/geometric-reasoning-dsl-prototype/src/: __init__.py
ai_scout_batch_2026_04_18/llm-hardware-co-design-prototype/: README.md  config.py  main.py  requirements.txt
ai_scout_batch_2026_04_18/llm-hardware-co-design-prototype/hardware_models/: analog_model.py  base_accelerator.py  dataflow_sim.py  memory_hierarchy_sim.py  neuromorphic_model.py  photonic_model.py  quant_hardware_unit.py
ai_scout_batch_2026_04_18/llm-hardware-co-design-prototype/utils/: data_loader.py  logging_setup.py
ai_scout_batch_2026_04_19/llm-determinism-consistency-layer-prototype/: .gitignore  README.md  config.py  main.py  requirements.txt
ai_scout_batch_2026_04_19/llm-determinism-consistency-layer-prototype/anchoring/: __init__.py  context_injector.py  state_manager.py
ai_scout_batch_2026_04_19/llm-determinism-consistency-layer-prototype/core/: __init__.py  determinism_layer.py  llm_interface.py
ai_scout_batch_2026_04_19/llm-determinism-consistency-layer-prototype/validation/: __init__.py  correction_strategies.py  ground_truth_manager.py  validators.py
ai_scout_batch_2026_04_22/llm-semantic-idempotency-prototype/: requirements.txt
ai_scout_batch_2026_04_22/llm-semantic-idempotency-prototype/agents/: base_agent.py  example_agent_A.py  example_agent_B.py
ai_scout_batch_2026_04_22/llm-semantic-idempotency-prototype/config/: agent_configs.yaml  settings.py
ai_scout_batch_2026_04_22/llm-semantic-idempotency-prototype/data/: expected_outputs.json  sample_inputs.json
ai_scout_batch_2026_04_22/llm-semantic-idempotency-prototype/formal_verification/: __init__.py
ai_scout_batch_2026_04_25/llm-multi-agent-orchestration-framework/: README.md  requirements.txt
ai_scout_batch_2026_04_25/llm-multi-agent-orchestration-framework/config/: __init__.py  logging.ini  (+1 more)
ai_scout_batch_2026_04_26/robust-audio-visual-sync-engine/: Dockerfile  README.md  main.py  requirements.txt
ai_scout_batch_2026_04_28/deterministic-agentic-workflow-framework/: README.md  config.py  main.py  requirements.txt
(+80 files in other folders)
