```toml
[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "quantizeflow"
dynamic = ["version"]
description = "A PyTorch/JAX extension for dynamic, block-adaptive quantization schemes like IF4."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" } # Or { file = "LICENSE" } if a separate file
authors = [
  { name = "QuantizeFlow Developers", email = "dev@quantizeflow.org" },
]
keywords = [
    "quantization",
    "deep learning",
    "pytorch",
    "jax",
    "if4",
    "low precision",
    "gpu",
    "cuda",
    "triton",
    "machine learning",
    "accelerated computing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=1.13.0", # Minimum version supporting necessary features or cpp_extension
    "numpy>=1.20.0",
    "packaging>=21.0", # For robust version comparisons
    "ninja>=1.10.0; sys_platform != 'win32'", # Often required by torch.utils.cpp_extension
    "triton>=2.1.0; sys_platform != 'win32'", # If Triton is a direct runtime dependency
]

[project.urls]
Homepage = "https://github.com/quantizeflow/quantizeflow" # Placeholder
Repository = "https://github.com/quantizeflow/quantizeflow"
Documentation = "https://quantizeflow.readthedocs.io" # Placeholder
Bug Tracker = "https://github.com/quantizeflow/quantizeflow/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "sphinx>=6.0",
    "furo>=2023.08.08",
    "torchvision>=0.14.0", # For examples like MNIST
    "jax", # If JAX backend is being developed/tested
    "jaxlib",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "torchvision>=0.14.0",
]

[tool.setuptools_scm]
write_to = "quantizeflow/_version.py"
fallback_version = "0.0.0.dev0" # A fallback for non-git environments

[tool.setuptools.packages.find]
where = ["."]
include = ["quantizeflow*"]
exclude = ["examples*", "tests*"] # Exclude these directories from the package

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["quantizeflow"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
no_implicit_optional = true
show_error_codes = true
check_untyped_defs = true
disallow_untyped_defs = false # Allow for gradual typing
exclude = ["setup.py", "examples/", "tests/"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=quantizeflow --cov-report=term-missing -ra"
testpaths = "tests"
python_files = "test_*.py"
xfail_strict = true
```